# clickhouse_blog_rag

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
data/topic_models/topic_model_2026-05-28/: chunks_topics.parquet  hierarchy.json  manifest.json  topics.parquet
data/topic_models/topic_model_2026-05-28/topic_model/: ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
eval/: queries.yaml
ollama_setup/: README.md  setup.sh
paper/: PLN_Rag_Artigo_AtvFinal.md  PLN_Rag_Artigo_AtvFinal.tex
rag_dpr_blog/: __init__.py  chunker.py  cli.py  encoders.py  evaluate.py  index.py  llm.py  reranker.py  topics.py
