[project]
name = "clickhouse-raft-rag"
version = "0.1.0"
description = "Temporal RAG over ClickHouse history — ingestion pipelines"
authors = [
    { name = "Guimas", email = "guimarret@gmail.com" },
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pygit2>=1.15",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "pyarrow>=17",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "bertopic>=0.17.4",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
    "torch>=2.4",
    "triton-rocm; sys_platform == 'linux'",
    "anthropic>=0.104.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.0"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
triton-rocm = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }
